# libench

./: .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  LICENSE  Pipfile
script/: build.sh  run.sh
src/main/cpp/: avif_codec.cpp  avif_codec.h  codec.cpp  codec.h  ffv1_codec.cpp  ffv1_codec.h  jxl_codec.cpp  jxl_codec.h  kduht_codec.cpp  kduht_codec.h  main.cpp  ohtj2k_codec.cpp  ohtj2k_codec.h  ojph_codec.cpp  ojph_codec.h  png_codec.cpp  png_codec.h  qoi_codec.cpp  qoi_codec.h  webp_codec.cpp  webp_codec.h
src/main/python/: make_page.py
src/main/resources/hbs/: index.hbs
src/test/python/: test_make_page.py
src/test/resources/: results.csv
src/test/resources/images/: loc.720x243.yuv422p10le.yuv
src/test/resources/results/: results.csv
